<resources>
    <string name="app_name">Manoa-Fix-It</string>
    <!-- Menu labels -->
    <string name="action_sort">Sort By</string>
    <string name="action_settings">Settings</string>
    <string name="details_edit">Edit</string>
    <string name="details_delete">Delete</string>
    <!-- Form Labels -->
    <string name="form_image">Image Placeholder</string>
    <string name="form_title">Title</string>
    <string name="form_title_hint">Please enter name of issue.</string>
    <string name="form_loc">Location</string>
    <string name="form_loc_hint">Where was the issue found?</string>
    <string name="form_date">Date</string>
    <string name="form_date_hint">When did you find the issue?</string>
    <string name="form_info">Details</string>
    <string name="form_info_hint">Please describe the issue.</string>
    <string name="submit_label">SUBMIT</string>

    <!-- Tab labels -->
    <string name="tab_issues">Issues</string>
    <string name="tab_complaints">Complaints</string>

    <!-- sample issue data -->
    <string name="title_placeholder">Title</string>
    <string name="loc_placeholder">Campus Center</string>
    <string name="status_placeholder">Unresolved</string>
    <string name="date_placeholder">December 26, 2019</string>
    <string name="detail_placeholder">
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed non aliquet augue, faucibus tincidunt ligula. \n
        \n
        Vestibulum gravida, nunc at venenatis egestas, nisl massa varius leo, sit amet sagittis nisl quam et leo.
    </string>
    <string name="navigation_drawer_open">a</string>
    <string name="navigation_drawer_close">b</string>
    <!-- Slider Menu options -->
    <string name="home">Home</string>
    <string name="your_posts">Your Posts</string>
    <string name="likes">Likes</string>
    <integer name="userid">22999999</integer>
    <string name="email">example@hawaii.edu</string>

    <integer-array name="issue_user_id">
        <item>55550012</item>
        <item>22999999</item>
        <item>55550012</item>
        <item>55667788</item>
    </integer-array>

    <string-array name="issue_titles">
        <item>Kuykendall Bathrooms</item>
        <item>POST ICSpace Printer</item>
        <item>WRC Broken Treadmills</item>
        <item>Bilger Addition Heavy Doors</item>
    </string-array>

    <string-array name="issue_locs">
        <item>Kuykendall Hall</item>
        <item>POST Building</item>
        <item>Campus Center</item>
        <item>Bilger Hall</item>
    </string-array>

    <string-array name="issue_statuses">
        <item>Unresolved</item>
        <item>Resolved</item>
        <item>Pending</item>
        <item>For Review</item>
    </string-array>

    <string-array name="issue_dates">
        <item>1467972000000</item>
        <item>1566295200000</item>
        <item>1577354400000</item>
        <item>1578218400000</item>
    </string-array>

    <string-array name="issue_info">
        <item>Bathrooms never have any toilet paper!</item>
        <item>The printer has been busted for too long!\n\n
            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed non aliquet augue, faucibus tincidunt ligula. </item>
        <item>How are we supposed to run now!?\n\n
            Vestibulum gravida, nunc at venenatis egestas, nisl massa varius leo, sit amet sagittis nisl quam et leo.</item>
        <item>Why are these doors so heavy!?</item>
    </string-array>

    <integer-array name="issue_points">
        <item>27</item>
        <item>16</item>
        <item>42</item>
        <item>69</item>
    </integer-array>

    <string-array name="compl_titles">
        <item>Vending Machines</item>
        <item>Drinks???</item>
    </string-array>

    <string-array name="compl_info">
        <item>Poptarts in the vending machines are too overpriced!\n\n
            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed non aliquet augue, faucibus tincidunt ligula. </item>
        <item>Why are there only two flavors of Monster in da whole building lol\n\n
            Vestibulum gravida, nunc at venenatis egestas, nisl massa varius leo, sit amet sagittis nisl quam et leo.</item>
    </string-array>

    <string-array name="issue_images">
        <item>@drawable/img_baseball</item>
        <item>@drawable/img_badminton</item>
        <item>@drawable/img_basketball</item>
        <item>@drawable/img_bowling</item>
        <item>@drawable/img_cycling</item>
        <item>@drawable/img_golf</item>
        <item>@drawable/img_running</item>
        <item>@drawable/img_soccer</item>
        <item>@drawable/img_swimming</item>
        <item>@drawable/img_tabletennis</item>
        <item>@drawable/img_tennis</item>
    </string-array>

    <string-array name="image_spinner">
        <item>Baseball</item>
        <item>Badminton</item>
        <item>Basketball</item>
        <item>Bowling</item>
        <item>Cycling</item>
        <item>Golf</item>
        <item>Running</item>
        <item>Soccer</item>
        <item>Swimming</item>
        <item>Table Tennis</item>
        <item>Tennis</item>
    </string-array>
</resources>
