<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:icon="@drawable/ic_home_24dp"
            android:title="@string/home" />
        <item
            android:icon="@drawable/ic_send_32dp"
            android:title="@string/your_posts" />
        <item
            android:icon="@drawable/ic_thumb_up_24dp"
            android:title="@string/likes" />
    </group>

    <group
        android:checkableBehavior="single"
        android:menuCategory="secondary">
        <item
            android:icon="@drawable/ic_settings_24dp"
            android:title="Settings" />
        <item
            android:icon="@drawable/ic_directions_run_black_24dp"
            android:title="Log Out" />
    </group>

</menu>
