<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/compl_toolbarLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/compl_addToolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            android:theme="@style/ThemeOverlay.AppCompat.ActionBar" />

    </com.google.android.material.appbar.AppBarLayout>


    <TextView
        android:id="@+id/compl_title_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/compl_toolbarLayout"
        android:padding="12dp"
        android:text="@string/form_title"
        android:textSize="18sp" />

    <EditText
        android:id="@+id/compl_title_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/compl_toolbarLayout"
        android:layout_marginRight="20dp"
        android:layout_marginEnd="20dp"
        android:layout_toEndOf="@id/compl_title_label"
        android:layout_toRightOf="@id/compl_title_label"
        android:hint="@string/form_title_hint"
        android:inputType="text"
        android:padding="12dp"/>

    <TextView
        android:id="@+id/compl_loc_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/compl_title_label"
        android:padding="12dp"
        android:text="@string/form_loc"
        android:textSize="18sp" />

    <EditText
        android:id="@+id/compl_loc_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/compl_title_label"
        android:layout_toEndOf="@id/compl_loc_label"
        android:layout_marginRight="20dp"
        android:layout_marginEnd="20dp"
        android:layout_toRightOf="@id/compl_loc_label"
        android:hint="@string/form_loc_hint"
        android:inputType="text"
        android:padding="12dp" />

    <TextView
        android:id="@+id/compl_info_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/compl_loc_label"
        android:padding="12dp"
        android:text="@string/form_info"
        android:textSize="18sp" />

    <EditText
        android:id="@+id/compl_info_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/compl_loc_label"
        android:layout_toEndOf="@id/compl_info_label"
        android:layout_toRightOf="@id/compl_info_label"
        android:layout_marginRight="20dp"
        android:layout_marginEnd="20dp"
        android:hint="@string/form_info_hint"
        android:inputType="textMultiLine"
        android:padding="12dp" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/compl_submit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="16dp"
        app:srcCompat="@drawable/ic_send_32dp" />

</RelativeLayout>