<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/issue_toolbarLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/issue_addToolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            android:theme="@style/ThemeOverlay.AppCompat.ActionBar" />

    </com.google.android.material.appbar.AppBarLayout>

    <ImageView
        android:id="@+id/issue_image_placeholder"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/issue_toolbarLayout"
        android:paddingBottom="20dp"
        android:adjustViewBounds="true"
        android:contentDescription="@string/form_image" />

    <androidx.appcompat.widget.AppCompatSpinner
        android:id="@+id/issue_image_picker"
        style="@style/Widget.Design.FloatingActionButton"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_alignEnd="@id/issue_image_placeholder"
        android:layout_alignRight="@id/issue_image_placeholder"
        android:layout_alignBottom="@id/issue_image_placeholder"
        android:layout_marginStart="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginBottom="10dp"
        android:entries="@array/image_spinner"
        android:foreground="@drawable/ic_add_photo_18dp"
        android:foregroundGravity="center"
        android:padding="8dp"
        android:spinnerMode="dialog"
        android:theme="@style/ThemeOverlay.AppCompat" />

    <TextView
        android:id="@+id/issue_title_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/issue_image_placeholder"
        android:padding="12dp"
        android:text="@string/form_title"
        android:textSize="18sp" />

    <EditText
        android:id="@+id/issue_title_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/issue_image_placeholder"
        android:layout_marginRight="20dp"
        android:layout_marginEnd="20dp"
        android:layout_toEndOf="@id/issue_title_label"
        android:layout_toRightOf="@id/issue_title_label"
        android:hint="@string/form_title_hint"
        android:inputType="text"
        android:padding="12dp"/>

    <TextView
        android:id="@+id/issue_loc_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/issue_title_label"
        android:padding="12dp"
        android:text="@string/form_loc"
        android:textSize="18sp" />

    <EditText
        android:id="@+id/issue_loc_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/issue_title_label"
        android:layout_toEndOf="@id/issue_loc_label"
        android:layout_marginRight="20dp"
        android:layout_marginEnd="20dp"
        android:layout_toRightOf="@id/issue_loc_label"
        android:hint="@string/form_loc_hint"
        android:inputType="text"
        android:padding="12dp" />

    <TextView
        android:id="@+id/issue_info_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/issue_loc_label"
        android:padding="12dp"
        android:text="@string/form_info"
        android:textSize="18sp" />

    <EditText
        android:id="@+id/issue_info_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/issue_loc_label"
        android:layout_toEndOf="@id/issue_info_label"
        android:layout_toRightOf="@id/issue_info_label"
        android:layout_marginRight="20dp"
        android:layout_marginEnd="20dp"
        android:hint="@string/form_info_hint"
        android:inputType="textMultiLine"
        android:padding="12dp" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/issue_submit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="16dp"
        app:srcCompat="@drawable/ic_send_32dp" />
</RelativeLayout>