<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="8dp"
    app:layout_constrainedHeight="true">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/issueImage"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:adjustViewBounds="true" />

        <TextView
            android:id="@+id/issueTitle"
            style="@style/TextAppearance.AppCompat.Headline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@id/issueImage"
            android:padding="8dp"
            android:text="@string/title_placeholder"
            android:theme="@style/ThemeOverlay.AppCompat.Dark" />

        <TextView
            android:id="@+id/issuePoints"
            style="@style/TextAppearance.AppCompat.Subhead"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/issueImage"
            android:paddingTop="8dp"
            android:paddingLeft="8dp"
            android:paddingBottom="8dp"
            android:text="@string/tab_issues"
            android:textColor="?android:textColorSecondary"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/list_likes_string"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/TextAppearance.AppCompat.Subhead"
            android:textColor="?android:textColorSecondary"
            android:layout_below="@id/issueImage"
            android:layout_toRightOf="@id/issuePoints"
            android:paddingTop="8dp"
            android:paddingLeft="5dp"
            android:paddingStart="5dp"
            android:text="Likes" />

        <TextView
            android:id="@+id/list_separator1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/issueImage"
            android:layout_toRightOf="@id/list_likes_string"
            android:padding="8dp"
            android:text="·" />

        <TextView
            android:id="@+id/issueDate"
            style="@style/TextAppearance.AppCompat.Subhead"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/issueImage"
            android:layout_toRightOf="@id/list_separator1"
            android:paddingTop="8dp"
            android:text="@string/date_placeholder"
            android:textColor="?android:textColorSecondary" />

        <TextView
            android:id="@+id/list_separator2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/issueImage"
            android:layout_toRightOf="@id/issueDate"
            android:padding="8dp"
            android:text="·" />

        <TextView
            android:id="@+id/issueLoc"
            style="@style/TextAppearance.AppCompat.Subhead"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/issueImage"
            android:layout_toRightOf="@id/list_separator2"
            android:paddingTop="8dp"
            android:text="@string/loc_placeholder"
            android:textColor="?android:textColorSecondary" />

        <TextView
            android:id="@+id/issueStatus"
            style="@style/TextAppearance.AppCompat.Subhead"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/issuePoints"
            android:paddingLeft="8dp"
            android:text="@string/status_placeholder"
            android:textColor="?android:textColorSecondary" />

        <TextView
            android:id="@+id/issueDesc"
            style="@style/TextAppearance.AppCompat.Subhead"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/issueStatus"
            android:padding="8dp"
            android:maxLines="1"
            android:text="@string/detail_placeholder" />
    </RelativeLayout>
</androidx.cardview.widget.CardView>
