<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/toolbarLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar_detail"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            android:theme="@style/ThemeOverlay.AppCompat.ActionBar"/>

    </com.google.android.material.appbar.AppBarLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/toolbarLayout">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:context=".IssueActivity">

            <ImageView
                android:id="@+id/issueImageDetail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:adjustViewBounds="true"/>

            <TextView
                android:id="@+id/locDetail"
                style="@style/TextAppearance.AppCompat.Subhead"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/dateDetail"
                android:layout_alignRight="@id/dateDetail"
                android:layout_alignEnd="@id/dateDetail"
                android:paddingTop="8dp"
                android:paddingRight="16dp"
                android:paddingEnd="16dp"
                android:text="@string/loc_placeholder"
                android:textColor="?android:textColorSecondary" />

            <TextView
                android:id="@+id/statusDetail"
                style="@style/TextAppearance.AppCompat.Subhead"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/issueImageDetail"
                android:paddingTop="16dp"
                android:paddingLeft="16dp"
                android:paddingStart="16dp"
                android:text="@string/status_placeholder"
                android:textColor="?android:textColorSecondary" />

            <TextView
                android:id="@+id/dateDetail"
                style="@style/TextAppearance.AppCompat.Subhead"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/issueImageDetail"
                android:layout_alignRight="@id/issueImageDetail"
                android:layout_alignEnd="@id/issueImageDetail"
                android:paddingTop="16dp"
                android:paddingRight="16dp"
                android:paddingEnd="16dp"
                android:text="@string/date_placeholder" />

            <TextView
                android:id="@+id/infoDetail"
                style="@style/TextAppearance.AppCompat.Subhead"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/locDetail"
                android:padding="16dp"
                android:text="@string/detail_placeholder"/>
        </RelativeLayout>
    </ScrollView>
</RelativeLayout>